remade header via BEM and SASS

--- a/index.html
+++ b/index.html
@@ -11,43 +11,44 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="./css/main.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <!--Шапка сайта-->
     <header class="header">
-        <div class="header-container container">
-            <nav class="header-nav">
-                <a class="logo link" href="./index.html">
-                    <div class="logo-animation">
-                        <span class="logo-accent">Web</span>Studio
+        <div class="header__container container">
+            <nav class="header__nav">
+                <a class="logo" href="./index.html">
+                    <div class="logo__animation">
+                        <span class="logo__accent">Web</span>Studio
                     </div>
                 </a>
                 <ul class="nav">
-                    <li class="nav-item">
-                        <a class="nav-link current" href="">Студия</a>
+                    <li class="nav__item">
+                        <a class="nav__link nav__link--current" href="">Студия</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./portfolio.html">Портфолио</a>
+                    <li class="nav__item">
+                        <a class="nav__link" href="./portfolio.html">Портфолио</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Контакты</a>
+                    <li class="nav__item">
+                        <a class="nav__link" href="">Контакты</a>
                     </li>
                 </ul>
             </nav>
-            <ul class="contacts-list">
-                <li class="contacts-item">
-                    <a class="contacts-link" href="mailto:info@devstudio.com">
-                        <svg class="header-icon" width="16" height="12">
+            <ul class="contacts__list">
+                <li class="contacts__item">
+                    <a class="contacts__link" href="mailto:info@devstudio.com">
+                        <svg class="contacts__icon" width="16" height="12">
                             <use href="./images/sprite.svg#icon-mail"></use>
                         </svg>
                         info@devstudio.com
                     </a>
                 </li>
-                <li class="contacts-item">
-                    <a class="contacts-link" href="tel:+380961111111">
-                        <svg class="header-icon" width="10" height="16">
+                <li class="contacts__item">
+                    <a class="contacts__link" href="tel:+380961111111">
+                        <svg class="contacts__icon" width="10" height="16">
                             <use href="./images/sprite.svg#icon-smartphone"></use>
                         </svg>
                         +38 096 111 11 11
@@ -372,7 +373,7 @@
     <footer class="footer">
         <div class="footer-container container">
             <div class="address">
-                <a class="footer-logo" href="./index.html"><span class="logo-accent">Web</span>Studio</a>
+                <a class="footer-logo" href="./index.html"><span class="logo__accent">Web</span>Studio</a>
                 <address class="footer-address">
                     <ul class="address-list">
                         <li class="address-item">
