added mentor fixes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </li>
                 </ul>
             </nav>
-            <ul class="contacts__list">
+            <ul class="contacts">
                 <li class="contacts__item">
                     <a class="contacts__link" href="mailto:info@devstudio.com">
                         <svg class="contacts__icon" width="16" height="12">
@@ -66,12 +66,12 @@
             </div>
         </section>
         <!--Особености-->
-        <section class="peculiarities section">
+        <section class="section">
             <div class="container">
                 <h2 class="visually-hidden">Особености</h2>
-                <ul class="peculiarities__list">
+                <ul class="peculiarities">
                     <li class="peculiarities__item">
-                        <div class="peculiarities__icon">
+                        <div class="peculiarities__box">
                             <svg width="70" height="70">
                                 <use href="./images/sprite.svg#icon-antenna"></use>
                             </svg>
@@ -82,7 +82,7 @@
                         </p>
                     </li>
                     <li class="peculiarities__item">
-                        <div class="peculiarities__icon">
+                        <div class="peculiarities__box">
                             <svg width="70" height="70">
                                 <use href="./images/sprite.svg#icon-clock"></use>
                             </svg>
@@ -93,7 +93,7 @@
                             собой.</p>
                     </li>
                     <li class="peculiarities__item">
-                        <div class="peculiarities__icon">
+                        <div class="peculiarities__box">
                             <svg width="70" height="70">
                                 <use href="./images/sprite.svg#icon-diagram"></use>
                             </svg>
@@ -104,7 +104,7 @@
                             обуславливает.</p>
                     </li>
                     <li class="peculiarities__item">
-                        <div class="peculiarities__icon">
+                        <div class="peculiarities__box">
                             <svg width="70" height="70">
                                 <use href="./images/sprite.svg#icon-astronaut"></use>
                             </svg>
@@ -117,46 +117,46 @@
             </div>
         </section>
         <!--Чем мы занимаемся-->
-        <section class="working section">
+        <section class="section section--no-padding-top">
             <div class="container">
                 <h2 class="section__title">Чем мы занимаемся</h2>
-                <ul class="working__list">
+                <ul class="working">
                     <li class="working__item">
-                        <div class="work-thumb">
-                            <img class="work__img" src="./images/box-1.jpg" alt="пишет код" width="370" height="294">
-                            <p class="work__text">Десктопные приложения</p>
+                        <div class="working__thumb">
+                            <img class="working__img" src="./images/box-1.jpg" alt="пишет код" width="370" height="294">
+                            <p class="working__text">Десктопные приложения</p>
                         </div>
                     </li>
                     <li class="working__item">
-                        <div class="work-thumb">
-                            <img class="work__img" src="./images/box-2.jpg" alt="делает макет" width="370"
+                        <div class="working__thumb">
+                            <img class="working__img" src="./images/box-2.jpg" alt="делает макет" width="370"
                                 height="294">
-                            <p class="work__text">Мобильные приложения</p>
+                            <p class="working__text">Мобильные приложения</p>
                         </div>
                     </li>
                     <li class="working__item">
-                        <div class="work-thumb">
-                            <img class="work__img" src="./images/box-3.jpg" alt="тестирует программу" width="370"
+                        <div class="working__thumb">
+                            <img class="working__img" src="./images/box-3.jpg" alt="тестирует программу" width="370"
                                 height="294">
-                            <p class="work__text">Дизайнерские решения</p>
+                            <p class="working__text">Дизайнерские решения</p>
                         </div>
                     </li>
                 </ul>
             </div>
         </section>
         <!--Наша команда-->
-        <section class="team section">
+        <section class="section section--background">
             <div class="container">
                 <h2 class="section__title">Наша команда</h2>
-                <ul class="team__list">
+                <ul class="team">
                     <li class="team-card">
                         <img src="./images/our-team/img1.jpg" alt="дизайнер продуктов" width="270" height="260">
                         <div class="team-card__container">
                             <h3 class="team-card__title">Игорь Демьяненко</h3>
                             <p class="team-card__text" lang="en">Product Designer</p>
-                            <ul class="social__list">
+                            <ul class="social">
                                 <li class="social__item">
-                                    <a class="social__link social-icon" href="" target="_blank"
+                                    <a class="social__link" href="" target="_blank"
                                         rel="noopener noreferrer">
                                         <svg width="20" height="20">
                                             <use href="./images/sprite.svg#icon-instagram"></use>
@@ -164,7 +164,7 @@
                                     </a>
                                 </li>
                                 <li class="social__item">
-                                    <a class="social__link social-icon" href="" target="_blank"
+                                    <a class="social__link" href="" target="_blank"
                                         rel="noopener noreferrer">
                                         <svg width="20" height="20">
                                             <use href="./images/sprite.svg#icon-twitter"></use>
@@ -172,7 +172,7 @@
                                     </a>
                                 </li>
                                 <li class="social__item">
-                                    <a class="social__link social-icon" href="" target="_blank"
+                                    <a class="social__link" href="" target="_blank"
                                         rel="noopener noreferrer">
                                         <svg width="20" height="20">
                                             <use href="./images/sprite.svg#icon-facebook"></use>
@@ -180,7 +180,7 @@
                                     </a>
                                 </li>
                                 <li class="social__item">
-                                    <a class="social__link social-icon" href="" target="_blank"
+                                    <a class="social__link" href="" target="_blank"
                                         rel="noopener noreferrer">
                                         <svg width="20" height="20">
                                             <use href="./images/sprite.svg#icon-linkedin"></use>
@@ -195,9 +195,9 @@
                         <div class="team-card__container">
                             <h3 class="team-card__title">Ольга Репина</h3>
                             <p class="team-card__text" lang="en">Frontend Developer</p>
-                            <ul class="social__list">
+                            <ul class="social">
                                 <li class="social__item">
-                                    <a class="social__link social-icon" href="" target="_blank"
+                                    <a class="social__link" href="" target="_blank"
                                         rel="noopener noreferrer">
                                         <svg width="20" height="20">
                                             <use href="./images/sprite.svg#icon-instagram"></use>
@@ -205,7 +205,7 @@
                                     </a>
                                 </li>
                                 <li class="social__item">
-                                    <a class="social__link social-icon" href="" target="_blank"
+                                    <a class="social__link" href="" target="_blank"
                                         rel="noopener noreferrer">
                                         <svg width="20" height="20">
                                             <use href="./images/sprite.svg#icon-twitter"></use>
@@ -213,7 +213,7 @@
                                     </a>
                                 </li>
                                 <li class="social__item">
-                                    <a class="social__link social-icon" href="" target="_blank"
+                                    <a class="social__link" href="" target="_blank"
                                         rel="noopener noreferrer">
                                         <svg width="20" height="20">
                                             <use href="./images/sprite.svg#icon-facebook"></use>
@@ -221,7 +221,7 @@
                                     </a>
                                 </li>
                                 <li class="social__item">
-                                    <a class="social__link social-icon" href="" target="_blank"
+                                    <a class="social__link" href="" target="_blank"
                                         rel="noopener noreferrer">
                                         <svg width="20" height="20">
                                             <use href="./images/sprite.svg#icon-linkedin"></use>
@@ -236,9 +236,9 @@
                         <div class="team-card__container">
                             <h3 class="team-card__title">Николай Тарасов</h3>
                             <p class="team-card__text" lang="en">Marketing</p>
-                            <ul class="social__list">
+                            <ul class="social">
                                 <li class="social__item">
-                                    <a class="social__link social-icon" href="" target="_blank"
+                                    <a class="social__link" href="" target="_blank"
                                         rel="noopener noreferrer">
                                         <svg width="20" height="20">
                                             <use href="./images/sprite.svg#icon-instagram"></use>
@@ -246,7 +246,7 @@
                                     </a>
                                 </li>
                                 <li class="social__item">
-                                    <a class="social__link social-icon" href="" target="_blank"
+                                    <a class="social__link" href="" target="_blank"
                                         rel="noopener noreferrer">
                                         <svg width="20" height="20">
                                             <use href="./images/sprite.svg#icon-twitter"></use>
@@ -254,7 +254,7 @@
                                     </a>
                                 </li>
                                 <li class="social__item">
-                                    <a class="social__link social-icon" href="" target="_blank"
+                                    <a class="social__link" href="" target="_blank"
                                         rel="noopener noreferrer">
                                         <svg width="20" height="20">
                                             <use href="./images/sprite.svg#icon-facebook"></use>
@@ -262,7 +262,7 @@
                                     </a>
                                 </li>
                                 <li class="social__item">
-                                    <a class="social__link social-icon" href="" target="_blank"
+                                    <a class="social__link" href="" target="_blank"
                                         rel="noopener noreferrer">
                                         <svg width="20" height="20">
                                             <use href="./images/sprite.svg#icon-linkedin"></use>
@@ -277,9 +277,9 @@
                         <div class="team-card__container">
                             <h3 class="team-card__title">Михаил Ермаков</h3>
                             <p class="team-card__text" lang="en">UI Designer</p>
-                            <ul class="social__list">
+                            <ul class="social">
                                 <li class="social__item">
-                                    <a class="social__link social-icon" href="" target="_blank"
+                                    <a class="social__link" href="" target="_blank"
                                         rel="noopener noreferrer">
                                         <svg width="20" height="20">
                                             <use href="./images/sprite.svg#icon-instagram"></use>
@@ -287,7 +287,7 @@
                                     </a>
                                 </li>
                                 <li class="social__item">
-                                    <a class="social__link social-icon" href="" target="_blank"
+                                    <a class="social__link" href="" target="_blank"
                                         rel="noopener noreferrer">
                                         <svg width="20" height="20">
                                             <use href="./images/sprite.svg#icon-twitter"></use>
@@ -295,7 +295,7 @@
                                     </a>
                                 </li>
                                 <li class="social__item">
-                                    <a class="social__link social-icon" href="" target="_blank"
+                                    <a class="social__link" href="" target="_blank"
                                         rel="noopener noreferrer">
                                         <svg width="20" height="20">
                                             <use href="./images/sprite.svg#icon-facebook"></use>
@@ -303,7 +303,7 @@
                                     </a>
                                 </li>
                                 <li class="social__item">
-                                    <a class="social__link social-icon" href="" target="_blank"
+                                    <a class="social__link" href="" target="_blank"
                                         rel="noopener noreferrer">
                                         <svg width="20" height="20">
                                             <use href="./images/sprite.svg#icon-linkedin"></use>
@@ -317,10 +317,10 @@
             </div>
         </section>
         <!--Постоянные клиенты-->
-        <section class="clients section">
+        <section class="section">
             <div class="container">
                 <h2 class="section__title">Постоянные клиенты</h2>
-                <ul class="clients__list">
+                <ul class="clients">
                     <li class="clients__item">
                         <a class="clients__link" href="" target="_blank" rel="noopener noreferrer">
                             <svg class="clients__icon" width="106" height="60">
@@ -392,28 +392,28 @@
                 <h3 class="footer-social__title">присоединяйтесь</h3>
                 <ul class="footer-social__list">
                     <li class="footer-social__item">
-                        <a class="footer-social__icon social-icon" href="" target="_blank" rel="noopener noreferrer">
+                        <a class="footer-social__link" href="" target="_blank" rel="noopener noreferrer">
                             <svg width="20" height="20">
                                 <use href="./images/sprite.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-social__item">
-                        <a class="footer-social__icon social-icon" href="" target="_blank" rel="noopener noreferrer">
+                        <a class="footer-social__link" href="" target="_blank" rel="noopener noreferrer">
                             <svg width="20" height="20">
                                 <use href="./images/sprite.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-social__item">
-                        <a class="footer-social__icon social-icon" href="" target="_blank" rel="noopener noreferrer">
+                        <a class="footer-social__link" href="" target="_blank" rel="noopener noreferrer">
                             <svg width="20" height="20">
                                 <use href="./images/sprite.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-social__item">
-                        <a class="footer-social__icon social-icon" href="" target="_blank" rel="noopener noreferrer">
+                        <a class="footer-social__link" href="" target="_blank" rel="noopener noreferrer">
                             <svg width="20" height="20">
                                 <use href="./images/sprite.svg#icon-linkedin"></use>
                             </svg>
