--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
                     </li>
                 </ul>
             </nav>
-            <ul class="contacts__list">
+            <ul class="contacts">
                 <li class="contacts__item">
                     <a class="contacts__link" href="mailto:info@devstudio.com">
                         <svg class="contacts__icon" width="16" height="12">
@@ -59,7 +59,7 @@
         <section class="section">
             <div class="container">
                 <h1 class="visually-hidden">Портфолио</h1>
-                <ul class="filter__list">
+                <ul class="filter">
                     <li class="filter__item"><button class="filter__btn" type="button">Все</button></li>
                     <li class="filter__item"><button class="filter__btn" type="button">Веб-сайты</button></li>
                     <li class="filter__item"><button class="filter__btn" type="button">Приложения</button></li>
@@ -205,28 +205,28 @@
                 <h3 class="footer-social__title">присоединяйтесь</h3>
                 <ul class="footer-social__list">
                     <li class="footer-social__item">
-                        <a class="footer-social__icon social-icon" href="" target="_blank" rel="noopener noreferrer">
+                        <a class="footer-social__link" href="" target="_blank" rel="noopener noreferrer">
                             <svg width="20" height="20">
                                 <use href="./images/sprite.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-social__item">
-                        <a class="footer-social__icon social-icon" href="" target="_blank" rel="noopener noreferrer">
+                        <a class="footer-social__link" href="" target="_blank" rel="noopener noreferrer">
                             <svg width="20" height="20">
                                 <use href="./images/sprite.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-social__item">
-                        <a class="footer-social__icon social-icon" href="" target="_blank" rel="noopener noreferrer">
+                        <a class="footer-social__link" href="" target="_blank" rel="noopener noreferrer">
                             <svg width="20" height="20">
                                 <use href="./images/sprite.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-social__item">
-                        <a class="footer-social__icon social-icon" href="" target="_blank" rel="noopener noreferrer">
+                        <a class="footer-social__link" href="" target="_blank" rel="noopener noreferrer">
                             <svg width="20" height="20">
                                 <use href="./images/sprite.svg#icon-linkedin"></use>
                             </svg>
